--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -15,6 +15,9 @@
                 </div>
             </li>
             <li class="nav-item mr-5"><a class="nav-link" href="/contato">Contato</a></li>
+            <% if (userLogado) {%>
+                <li class="nav-item mr-5"><a class="nav-link" href="/user/logout">Sair</a></li>
+            <% } %>   
         </ul>
     </div>
 </nav>
