--- a/views/cliente.ejs
+++ b/views/cliente.ejs
@@ -16,6 +16,323 @@ function convertDate(date){
     result += date.getFullYear();
     return result;
 }
+
+const cardapioSantaGiana = !(cliente.nomeUrl === 'paessantagianna') 
+    ? null: 
+    [
+        {
+            categoria: 'Pratos',
+            produtos: [
+                {
+                    descricao: 'Cuscuz com carne de sol na nata(carne na nata, queijo coalho,vinagrete)',
+                    preco: 'Meio: R$ 9,00/ Inteiro: R$ 15,00'
+                },
+                {
+                    descricao: 'Cuscuz com Buchada',
+                    preco: 'R$15,00'
+                },
+                {
+                    descricao: 'Cuscuz com Carneiro',
+                    preco: 'R$ 15,00'
+                },
+                {
+                    descricao: 'Meio Cuscuz com salsicha e queijo',
+                    preco: 'R$ 7,00'
+                },
+                {
+                    descricao: 'Cuscuz com ovo',
+                    preco: 'Meio: R$ 5,00/ Inteiro: R$ 7,00'
+                },
+                {
+                    descricao: 'Cuscuz com carne e ovo.',
+                    preco: 'Meio: R$ 8,50/ Inteiro: R$ 13,00'
+                },
+                {
+                    descricao: 'Cuscuz com calabresa e ovo',
+                    preco: 'Meio: R$ 7,50/ Inteiro: R$ 11,00'
+                },
+                {
+                    descricao: 'Cuscuz com calabresa.',
+                    preco: 'Meio: R$ 6,50/ Inteiro: R$ 10,00'
+                },
+                {
+                    descricao: 'Cuscuz com frango.',
+                    preco: 'Meio: R$ 7,50/ Inteiro: R$ 11,00'
+                },
+                {
+                    descricao: 'Cuscuz X-Tudo (carne de sol, ovo, calabresa, frango e queijo, vinagrete)',
+                    preco: 'R$ 20,00'
+                },
+                {
+                    descricao: 'Arroz de leite com carne de sol',
+                    preco: 'Meio: R$ 9,00 /Inteiro: R$ 15,00'
+                },
+                {
+                    descricao: 'Sopa',
+                    preco: 'R$ 6,00 / pra viagem: R$ 7,00'
+                },           
+            ]
+        },
+        {
+            categoria: 'Sexta-Feira',
+            produtos: [
+                {
+                    descricao: 'Mungunzá',
+                    preco: 'R$ 7,00'
+                },
+            ]
+        },
+        {
+            categoria: 'Sanduíches',
+            produtos: [
+                {
+                    descricao: 'Hambúrguer (Pão, hambúrguer , mussarela, alface, tomate)',
+                    preco: 'R$ 5,50'
+                },
+                {
+                    descricao: 'Hambúrguer especial Pão, hambúrguer duplo, mussarela, presunto, tomate,alface )',
+                    preco: 'R$ 10,00'
+                },
+                {
+                    descricao: 'X-frango (Pão,frango,presunto,mussarela,alface,tomate)',
+                    preco: 'R$ 8,00'
+                },
+                {
+                    descricao: 'Americano (Pão,presunto,mussarela,alface,tomate)',
+                    preco: 'R$ 6,00'
+                },
+                {
+                    descricao: 'Fran – Búrguer',
+                    preco: 'R$ 10,00'
+                },
+                
+            ]
+        },
+        {
+            categoria: 'Tapiocas',
+            produtos: [
+                {
+                    descricao: 'Tapioca com manteiga',
+                    preco: 'R$ 1,00'
+                },
+                {
+                    descricao: 'Tapioca com manteiga da terra',
+                    preco: 'R$ 1,25'
+                },
+                {
+                    descricao: 'Tapioca com carne de sol',
+                    preco: 'R$ 7,00'
+                },
+                {
+                    descricao: 'Tapioca com frango',
+                    preco: 'R$ 6,50'
+                },
+                {
+                    descricao: 'Tapioca com carne e frango',
+                    preco: 'R$ 10,00'
+                },
+                {
+                    descricao: 'Tapioca com ovo',
+                    preco: 'R$ 3,50'
+                },
+                {
+                    descricao: 'Tapioca com queijo',
+                    preco: 'R$ 4,50'
+                },
+                {
+                    descricao: 'Tapioca com queijo e ovo',
+                    preco: 'R$ 6,00'
+                },
+                {
+                    descricao: 'Tapioca mista',
+                    preco: 'R$ 6,00'
+                },
+                {
+                    descricao: 'Tapioca mista com ovo',
+                    preco: 'R$ 7,00'
+                },
+                {
+                    descricao: 'Tapioca com ricota',
+                    preco: 'R$ 6,00'
+                },
+                {
+                    descricao: 'Tapioca com frango e ricota',
+                    preco: 'R$ 9,00'
+                },
+                {
+                    descricao: 'Tapioca com frango e queijo',
+                    preco: 'R$ 9,00'
+                },
+                
+            ]
+        },
+        {
+            categoria: 'Pães',
+            produtos: [
+                {
+                    descricao: 'Pão com manteiga',
+                    preco: 'R$ 0,75'
+                },
+                {
+                    descricao: 'Pão na chapa',
+                    preco: 'R$ 1,00'
+                },
+                {
+                    descricao: 'Pão com ovo',
+                    preco: 'R$ 3,50'
+                },
+                {
+                    descricao: 'Pão com mortadela',
+                    preco: 'R$ 3,00'
+                },
+                {
+                    descricao: 'Pão com presunto',
+                    preco: 'R$ 3,50'
+                },
+                {
+                    descricao: 'Pão com salsicha',
+                    preco: 'R$ 3,50'
+                },
+                {
+                    descricao: 'Pão com queijo',
+                    preco: 'R$ 4,50'
+                },
+                {
+                    descricao: 'Pão com queijo e carne de sol',
+                    preco: 'R$ 9,00'
+                },
+                {
+                    descricao: 'Pão com queijo e ovo',
+                    preco: 'R$ 6,00'
+                },
+                {
+                    descricao: 'Misto Quente.',
+                    preco: 'R$ 5,00'
+                },
+                {
+                    descricao: 'Pão com presunto, mussarela e ovo',
+                    preco: 'R$ 7,00'
+                },
+                {
+                    descricao: 'Pão com carne de sol',
+                    preco: 'R$ 7,00'
+                },
+                {
+                    descricao: 'Pão com carne de sol  e  frango',
+                    preco: 'R$ 10,00'
+                },
+                {
+                    descricao: 'Pão completo (ovo, carne, calabresa, frango ,presunto e mussarela, vinagrete)',
+                    preco: 'R$ 14,00'
+                },            
+            ]
+        },
+        {
+            categoria: 'Café',
+            produtos: [
+                {
+                    descricao: 'Café grande',
+                    preco: 'R$ 1,00'
+                },
+                {
+                    descricao: 'Café pequeno',
+                    preco: 'R$ 0,50'
+                },
+                {
+                    descricao: 'Café com leite grande ',
+                    preco: 'R$ 1,50'
+                },
+                {
+                    descricao: 'Café com leite pequeno',
+                    preco: 'R$ 1,00'
+                },
+                
+            ]
+        },
+        {
+            categoria: 'Vitaminas',
+            produtos: [
+                {
+                    descricao: 'Banana com leite',
+                    preco: 'R$ 5,00'
+                },
+                {
+                    descricao: 'Abacate com leite',
+                    preco: 'R$ 5,00'
+                },            
+            ]
+        },
+        {
+            categoria: 'Sucos',
+            produtos: [
+                {
+                    descricao: 'Laranja',
+                    preco: 'R$ 5,00'
+                },  
+                {
+                    descricao: 'Açaí',
+                    preco: 'R$ 5,50'
+                },  
+                {
+                    descricao: 'Açaí com banana.',
+                    preco: 'R$ 6,50'
+                },  
+                {
+                    descricao: 'Guarabóm',
+                    preco: 'R$ 4,00'
+                },  
+                {
+                    descricao: 'Manga',
+                    preco: 'R$ 4,00'
+                },  
+                {
+                    descricao: 'Caju',
+                    preco: 'R$ 4,00'
+                },  
+                {
+                    descricao: 'Abacaxi',
+                    preco: 'R$ 4,00'
+                },  
+                {
+                    descricao: 'Acerola',
+                    preco: 'R$ 4,00'
+                },  
+                {
+                    descricao: 'Graviola',
+                    preco: 'R$ 4,00'
+                },  
+                {
+                    descricao: 'Tamarindo',
+                    preco: 'R$ 4,00'
+                },  
+                {
+                    descricao: 'Maracujá',
+                    preco: 'R$ 4,00'
+                },  
+                {
+                    descricao: 'Goiaba',
+                    preco: 'R$ 4,00'
+                },  
+                {
+                    descricao: 'Cajá',
+                    preco: 'R$ 4,00'
+                },  
+                {
+                    descricao: 'Ameixa',
+                    preco: 'R$ 4,00'
+                },  
+                {
+                    descricao: 'Morango',
+                    preco: 'R$ 4,00'
+                },  
+                {
+                    descricao: 'Uva',
+                    preco: 'R$ 4,00 '
+                },  
+                
+            ]
+        }         
+    ]   
 %>
 <!DOCTYPE html>
 <html lang="pt">
@@ -117,10 +434,40 @@ function convertDate(date){
                                                 <h2 class ="produto-preco"><%=mudarCasaDecimal(produto.preco, 2, "", ".", ",");%></h2>
                                             <% } %> 
                                             <p class="produto-desc"><%=produto.descricao%></p>
-                                        </div>
+                                        </div>                                        
                                     </div>
                                 <%}                             
                             }%>
+                            <% if (cliente.nomeUrl === 'paessantagianna') { %>
+                            <div class="col-12 mt-5">                                      
+                                <div class="cardapio">
+                                    <div class="cabecalho-cardapio">
+                                        <div>
+                                            <h3 class="text-center">Cardápio</h3>   
+                                            <h3 class="text-center">Pães Santa Gianna</h3>  
+                                        </div>
+                                    </div>
+                                    <% cardapioSantaGiana.forEach(cardapio => { %>
+                                        <h4 class="my-4 text-center"><%=cardapio.categoria%></h4> 
+                                        <ul>
+                                            <% cardapio.produtos.forEach(produto => { %>
+                                                <li>
+                                                    <div class="produto-cardapio"> 
+                                                        <%=produto.descricao%>
+                                                    </div>
+                                                    <div class="preco-cardapio">
+                                                        <%=produto.preco%> 
+                                                    </div>
+                                                    <!-- <div class="dots"></div> -->
+                                                    <hr>
+
+                                                </li> 
+                                            <% }) %>                                                                  
+                                    <% }) %>   
+                                    </ul>
+                                </div>
+                            </div>
+                            <% } %>
                             <!-- MODAL PRODUTOS -->
                             <div class="modal fade" id="modalProdutos" tabindex="-1" role="dialog">
                                 <div class="modal-dialog modal-dialog-centered">
@@ -192,9 +539,9 @@ function convertDate(date){
                            <div class="modal-footer">
                                <span>Cupons válidos até o dia <%= convertDate(promocao.periodoFim) %> ou até se esgotarem.</span>
                                <button type="button" class="btn btn-primary" onclick="inserirParticipante()">Obter cupom</button>
-                           </div>
-                       </div>
-                   </div>                                                                      
+                           </div>                                         
+                       </div>      
+                   </div>                                                                     
                </div>
            <% }                           
         } %><!-- MODAL CUPONS PROMOCIONAIS FIM -->
@@ -220,7 +567,7 @@ function convertDate(date){
                     <div>Compre agora</div>
                 </div>
             <% } %>     
-        </div>                      
+        </div>               
         <footer class="bg-light">
             <div class="container-fluid">
                 <div class="row mt-3 p-3">
